--- a/treinando.html
+++ b/treinando.html
@@ -10,26 +10,36 @@
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="bg-success p-2 text-dark bg-opacity-25 ">
     <form>
-        <div class="form-group row">
+        <div class="form-group row justify-content-center">
             <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
             <div class="col-sm-5">
                 <input type="text" class="form-control-plaintext" id="inputEmail" placeholder="email@example.com">
             </div>
         </div>
-        <div class="form-group row">
+        <div class="form-group row justify-content-center">
             <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
             <div class="col-sm-5">
                 <input type="password" class="form-control" id="inputPassword" placeholder="Password">
             </div>
         </div>
-        <input class="btn btn-primary" type="reset" value="input">
-        <input class="btn btn-primary" type="reset" value="Reset">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        <div>
+        <!-- Botões -->
+        <div class="justify-content-center">
+            <button type="submit" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Submit
+            </button>
+            <button type="reset" class="btn btn-secondary" data-bs-dismiss="modal">Reset</button>
+        </div>
+        <!-- Modal -->
+        <div class="modal fade col-8" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                    <div id="alerta" class="modal-header alert alert-success" role="alert">
+                        Enviado com sucesso!
+                    </div>
+            </div>
+        </div>         
+      </div>
     </form>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
