--- a/treinando.html
+++ b/treinando.html
@@ -11,8 +11,8 @@
 </head>
 
 <body class="bg-success p-2 text-dark bg-opacity-25 ">
-    <form class="bg-success p-2 text-dark bg-opacity-25 border rounded-4 shadow-lg p-3 mb-5 bg-body rounded">
-        <h1 class="form-group row justify-content-center">Pipoco do trovão</h1>
+    <form class="bg-success p-2 text-dark bg-opacity-25 border rounded-4 shadow-lg bg-body rounded col-md-6 offset-md-3 my-50">
+        <h1 class="form-group row justify-content-center">Login</h1>
         <div class="form-group row justify-content-center">
             <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
             <div class="col-sm-5">
@@ -26,12 +26,12 @@
             </div>
         </div>
         <!-- Botões -->
-        <div class="form-group position-relative">
-        <div class="position-absolute top-50 start-50 translate-middle mt-5">
-            <button type="submit" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        <div class="row justify-content-md-center">
+        <div class="col-sm-5 d-flex mx-3 mt-3">
+            <button type="submit" class="btn btn-primary mx-2" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 Entrar
             </button>
-            <button type="reset" class="btn btn-secondary" data-bs-dismiss="modal">Resetar</button>
+            <button type="reset" class="btn btn-secondary mx-2" data-bs-dismiss="modal">Resetar</button>
             </div>
         </div>
         <!-- Modal -->
