--- a/home.html
+++ b/home.html
@@ -65,30 +65,75 @@
         <td>Açúcar</td>
         <td>4,00</td>
         <td>10</td>
-        <a class="btn btn-primary" href="#" role="button">Link</a>
+        <td>
+          <a class="btn btn-primary" href="#" role="button">Alterar</a>
+          <button type="button" class="btn btn-danger">Excluir</button>
+        </td>
       </tr>
       <tr>
         <th scope="row">2</th>
         <td>Chocolate</td>
         <td>4,00</td>
         <td>15</td>
+        <td>
+          <a class="btn btn-primary" href="#" role="button">Alterar</a>
+          <button type="button" class="btn btn-danger">Excluir</button>
+        </td>
       </tr>
       <tr>
         <th scope="row">3</th>
         <td>Café</td>
         <td>17,00</td>
         <td>30</td>
+        <td>
+          <a class="btn btn-primary" href="#" role="button">Alterar</a>
+          <button type="button" class="btn btn-danger">Excluir</button>
+        </td>
       </tr>
-        <a class="btn btn-primary" href="#" role="button">Link</a>
-        <button class="btn btn-primary" type="submit">Button</button>
-        <input class="btn btn-primary" type="button" value="Input">
     </tbody>
   </table>
 
+  <div>
+    <a class="btn btn-primary" href="#" role="button" data-bs-toggle="modal"
+      data-bs-target="#cadastrarModal">Cadastrar</a>
+  </div>
+
+  <div class="modal" id="cadastrarModal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Cadastro de Produto</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="mb-3">
+              <label for="InputProduto" class="form-label">Produto</label>
+              <input type="text" class="form-control" id="InputProduto" aria-describedby="emailHelp">
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label">Preço</label>
+              <input type="number" step=".01" class="form-control" id="InputPreco">
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label">Quantidade</label>
+              <input type="number" class="form-control" id="InputPreco">
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" id="save">Save changes</button>
+        </div>
+      </div>
+    </div>
+    <div id="liveAlertPlaceholder"></div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
+  <script src="javascript/home.js"></script>
 </body>
 
 </html>
