--- a/home.html
+++ b/home.html
@@ -123,12 +123,13 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" id="save">Save changes</button>
+          <button type="button" class="btn btn-primary" id="save" data-bs-dismiss="modal">Save changes</button>
         </div>
       </div>
     </div>
-    <div id="liveAlertPlaceholder"></div>
   </div>
+
+  <div id="liveAlertPlaceholder"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
