Posição do botão cadastrar

--- a/home.html
+++ b/home.html
@@ -67,7 +67,7 @@
         <td>10</td>
         <td>
           <a class="btn btn-primary" href="#" role="button">Alterar</a>
-          <button type="button" class="btn btn-danger">Excluir</button>
+          <button type="button" class="btn btn-danger excluir">Excluir</button>
         </td>
       </tr>
       <tr>
@@ -77,7 +77,7 @@
         <td>15</td>
         <td>
           <a class="btn btn-primary" href="#" role="button">Alterar</a>
-          <button type="button" class="btn btn-danger">Excluir</button>
+          <button type="button" class="btn btn-danger excluir">Excluir</button>
         </td>
       </tr>
       <tr>
@@ -87,15 +87,19 @@
         <td>30</td>
         <td>
           <a class="btn btn-primary" href="#" role="button">Alterar</a>
-          <button type="button" class="btn btn-danger">Excluir</button>
+          <button type="button" class="btn btn-danger excluir">Excluir</button>
         </td>
       </tr>
     </tbody>
   </table>
 
-  <div>
-    <a class="btn btn-primary" href="#" role="button" data-bs-toggle="modal"
-      data-bs-target="#cadastrarModal">Cadastrar</a>
+  <div class="container">
+    <div class="row justify-content-md-center">
+      <div class="col-1">
+        <a class="btn btn-primary" href="#" role="button" data-bs-toggle="modal"
+          data-bs-target="#cadastrarModal">Cadastrar</a>
+      </div>
+    </div>
   </div>
 
   <div class="modal" id="cadastrarModal" tabindex="-1">
